--- a/app/src/main/res/layout/activity_wifi_scanner.xml
+++ b/app/src/main/res/layout/activity_wifi_scanner.xml
@@ -7,7 +7,7 @@ android:layout_height="match_parent">
 <ListView
     android:id="@+id/wifilist"
     android:layout_width="match_parent"
-    android:layout_height="312dp"
+    android:layout_height="0dp"
     android:layout_weight="0.97" />
 
 
@@ -18,5 +18,5 @@ android:layout_height="match_parent">
     android:layout_gravity="bottom"
     android:layout_margin="15dp"
     android:background="@android:color/holo_green_light"
-    android:text="Scan Again" />
+    android:text="@string/scan_again" />
 </LinearLayout>
