--- a/app/src/main/res/layout/activity_wifi_scanner.xml
+++ b/app/src/main/res/layout/activity_wifi_scanner.xml
@@ -1,4 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
@@ -7,42 +9,55 @@
     <ListView
         android:id="@+id/wifilist"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.97" />
+        android:layout_height="401dp"
+        android:layout_weight="0.97">
+
+    </ListView>
 
 
-    <LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:layout_height="wrap_content">
-    <Button
-        android:id="@+id/scan"
-        android:text="@string/scan_again"
-        android:layout_margin="15dp"
-        android:textColor="#050505"
-        android:textSize="20sp"
-        android:layout_width="120dp"
-        android:layout_height="40dp"
-        android:background="@drawable/buttonshape"
-        android:shadowColor="#A8A8A8"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="5"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="360dp"
+        android:layout_height="wrap_content">
 
-        />
+        <Button
+            android:id="@+id/scan"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/buttonshape"
+            android:shadowColor="#A8A8A8"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5"
+            android:text="@string/scan_again"
 
-    <Button
-        android:id="@+id/mentesbtn"
-        android:text="@string/mentes"
-        android:layout_margin="15dp"
-        android:textColor="#050505"
-        android:textSize="20sp"
-        android:layout_width="120dp"
-        android:layout_height="40dp"
-        android:background="@drawable/buttonshape"
-        android:shadowColor="#A8A8A8"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="5"
-        />
-    </LinearLayout>
+            android:textColor="#050505"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@+id/mentesbtn"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/mentesbtn"
+            android:layout_width="wrap_content"
+
+            android:layout_height="40dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/buttonshape1"
+            android:shadowColor="#A8A8A8"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5"
+            android:text="@string/mentes"
+            android:textColor="#050505"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout>
 
 
 
